---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/truncate.sql
---
SOURCE_FILE
  COMMENT "-- pg_grammar"
  WHITESPACE "\n"
  TRUNCATE
    TRUNCATE_KW "truncate"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_LIST
      TABLE_RELATION_NAME
        ONLY_KW "only"
        WHITESPACE " "
        TABLE_NAME_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "t"
    WHITESPACE "\n"
    RESTART_IDENTITY
      RESTART_KW "restart"
      WHITESPACE " "
      IDENTITY_KW "identity"
    WHITESPACE "\n"
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- multiple_tables"
  WHITESPACE "\n"
  TRUNCATE
    TRUNCATE_KW "TRUNCATE"
    WHITESPACE " "
    TABLE_LIST
      TABLE_RELATION_NAME
        ONLY_KW "only"
        WHITESPACE " "
        TABLE_NAME_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "a"
      COMMA ","
      WHITESPACE " "
      TABLE_RELATION_NAME
        TABLE_NAME_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "b"
        WHITESPACE " "
        STAR "*"
      COMMA ","
      WHITESPACE " "
      TABLE_RELATION_NAME
        TABLE_NAME_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "c"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rest"
  WHITESPACE "\n"
  TRUNCATE
    TRUNCATE_KW "truncate"
    WHITESPACE " "
    TABLE_LIST
      TABLE_RELATION_NAME
        TABLE_NAME_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n"
  TRUNCATE
    TRUNCATE_KW "truncate"
    WHITESPACE " "
    TABLE_LIST
      TABLE_RELATION_NAME
        TABLE_NAME_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "a"
    WHITESPACE " "
    CONTINUE_IDENTITY
      CONTINUE_KW "continue"
      WHITESPACE " "
      IDENTITY_KW "identity"
    SEMICOLON ";"
  WHITESPACE "\n"
  TRUNCATE
    TRUNCATE_KW "truncate"
    WHITESPACE " "
    TABLE_LIST
      TABLE_RELATION_NAME
        TABLE_NAME_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "a"
    WHITESPACE " "
    CONTINUE_IDENTITY
      CONTINUE_KW "continue"
      WHITESPACE " "
      IDENTITY_KW "identity"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
